--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,8 @@
-host     = 
-port     = 
-user     = 
-password = 
-dbname   = 
+DB_HOST     = 
+DB_PORT     = 
+DB_USERNAME = 
+DB_PASSWORD = 
+DB_NAME     = 
+PORT        = 
+ENV			= 
+DATABASE_URL= 
